# term-dashboard

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
configs/: example.yaml
src/term_dashboard.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/termdash/: __init__.py  config.py  dashboard.py  main.py  setup.py
src/termdash/sources/: __init__.py  base.py  espn_scores.py  f1_ergast.py  gmail_unread.py  mcp_base.py  open_meteo.py  rss.py  rss_ticker.py
tests/: test_config.py  test_espn_scores.py  test_espn_summary.py  test_f1_ergast.py  test_gmail_unread.py  test_open_meteo.py  test_rss.py  test_rss_ticker.py  test_sources_base.py
